--- a/app/views/pages/index.en.html.erb
+++ b/app/views/pages/index.en.html.erb
@@ -7,7 +7,7 @@
 		<p><button class="btn btn-success btn-lg" data-toggle="collapse" data-target="#subscribtion">Subscribe for news on Altyn ICO</button></p>
 	 <div id="subscribtion" class="row collapse">
 		<div class="col-xs-6 col-md-4 col-xs-offset-3 col-md-offset-4">
-			<%= render :partial =>'subscriptions/form' %>
+qwe
 		</div>
 	</div>
 	</header>
