--- a/app/views/pages/privacy.en.html.erb
+++ b/app/views/pages/privacy.en.html.erb
@@ -4,7 +4,7 @@
 
 <p><b>Last updated: 21 September, 2016</b></p>
 
-<p>altyn.io ("us", "we", or "our") operates http://altyn.io (the "Site"). This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site.</p>
+<p>cryptohorde.io ("us", "we", or "our") operates http://cryptohorde.io (the "Site"). This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site.</p>
 <p>We use your Personal Information only for providing and improving the Site. By using the Site, you agree to the collection and use of information in accordance with this policy.</p>
 
 <h2>Information Collection And Use</h2>
