--- a/app/views/pages/index.en.html.erb
+++ b/app/views/pages/index.en.html.erb
@@ -1,10 +1,10 @@
 <!-- ==== HEADERWRAP ==== -->
 <div id="headerwrap"> <!-- id="home"-->
 	<header class="clearfix">
-		<h1>cryptohorde.io</h1>
+		<h1>pestulon.io</h1>
 		<p>free home budget app</p>
 		<p style="color: yellow">track and analyze your spendings</p>
-		<p><button class="btn btn-success btn-lg" data-toggle="collapse" data-target="#subscribtion">Subscribe for news on Cryptohorde ICO</button></p>
+		<p><button class="btn btn-success btn-lg" data-toggle="collapse" data-target="#subscribtion">Subscribe for news on Pestulon ICO</button></p>
 	 <div id="subscribtion" class="row collapse">
 		<div class="col-xs-6 col-md-4 col-xs-offset-3 col-md-offset-4">
 qwe
