--- a/app/views/pages/contacts.en.html.erb
+++ b/app/views/pages/contacts.en.html.erb
@@ -2,6 +2,6 @@
 	<h1>Contacts</h1>
 </div>
 <ul>
-	<li>Email: <a href="mailto:info@cryptohorde.io">info@cryptohorde.io</a></li>
+	<li>Email: <a href="mailto:info@pestulon.io">info@pestulon.io</a></li>
 	<li>Address: 3, 1st Ln, Beach blvd., Egmont isl., BIOT</li>
 </ul>
