--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,6 +2,10 @@
 @import "bootstrap";
 @import "bootstrap/theme";
 
+/* ==========================================================================
+   Base Styles and Bootstrap Modifications
+   ========================================================================== */
+
 html,
 button,
 input,
@@ -73,7 +77,7 @@ body {
 }
 
 body {
-    font-family: "Lato", sans-serif;
+    font-family: "Lato";
     font-weight: 300;
     font-size: 16px;
     color: #555;
@@ -148,7 +152,7 @@ a img {
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway", sans-serif;
+    font-family: "Raleway";
     font-weight: 300;
     color: #333;
 }
@@ -180,7 +184,7 @@ em {
 pre {
     background: #ebebeb;
     border: none;
-    font-family: "Monaco", sans-serif;
+    font-family: "Monaco";
     font-size: 16px;
     color: #666;
     padding: 20px;
