--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -12,8 +12,8 @@
  *
  *= require_tree .
  *= require jquery-ui/datepicker
- *= require icomoon
- *= require animate-custom
+ *= require icomoon.css
+ *= require ionicons.min.css
  *= require_self
 
 /* ==========================================================================
