--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,6 @@
     <title><%= content_for?(:title) ? yield(:title) : t('title') %></title>
     <%= csrf_meta_tags %>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-    <![endif]-->
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css' />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -36,7 +32,7 @@
 	<meta name="theme-color" content="#000000">
 	
   </head>
-  <body data-spy="scroll" data-offset="0" data-target="#navbar-main"<%= ' class="crsl"'.html_safe if controller.controller_name=='pages' && !params[:page] %>>
+  <body>
 
     <div id="navbar-main">
           <!-- Fixed navbar -->
