--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,7 +15,9 @@
  *= require icomoon.css
  *= require ionicons.min.css
  *= require_self
+ */
 
+body {padding-top: 50px!important;}
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
