--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,13 @@
-<h2>Forgot your password?</h2>
+<div class="page-header">
+	<h1><%= t 'simple_form.labels.user.recovery.title' %></h1>
+</div>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :class => 'form-horizontal' }) do |f| %>
   <%= f.error_notification %>
+  <%= render partial: "devise/shared/flash_messages", flash: flash %> 
+  <%= f.input :email, :required => true, :autofocus => true %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
+	<%= f.button :submit, t('simple_form.labels.user.recovery.recover'), class: 'btn-default' %>
 <% end %>
 
 <%= render "devise/shared/links" %>
