--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,16 @@
-<h2>Resend unlock instructions</h2>
+<div class="page-header">
+	<h1><%= t('simple_form.labels.user.unlock.resend') %></h1>
+</div>
 
-<%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post, :class => 'form-horizontal'  }) do |f| %>
   <%= f.error_notification %>
+  <%= render partial: "devise/shared/flash_messages", flash: flash %> 
   <%= f.full_error :unlock_token %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
+    <%= f.input :email, :required => true, :autofocus => true %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Resend unlock instructions" %>
-  </div>
+
+    <%= f.button :submit, t('simple_form.labels.user.unlock.send'), class: 'btn-default' %>
 <% end %>
 
 <%= render "devise/shared/links" %>
