--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-	<link rel="apple-touch-icon" sizes="57x57" href="/_i/apple-icon-57x57.png">
+	<!--link rel="apple-touch-icon" sizes="57x57" href="/_i/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/_i/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/_i/apple-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="76x76" href="/_i/apple-icon-76x76.png">
@@ -25,7 +25,7 @@
 	<link rel="icon" type="image/png" sizes="192x192"  href="/_i/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/_i/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="/_i/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/_i/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/_i/favicon-16x16.png"-->
 	<link rel="manifest" href="/_i//manifest.json">
 	<meta name="msapplication-config" content="/_i/browserconfig.xml" />
 	<meta name="msapplication-TileColor" content="#000000">
