--- a/app/views/pages/index.en.html.erb
+++ b/app/views/pages/index.en.html.erb
@@ -385,7 +385,8 @@
 					<h3>Newsletter</h3>
 					<p>Register to our newsletter and be updated with the latests information regarding our services, offers and much more.</p>
 					<p>
-						<form class="form-horizontal" role="form">
+						<%= render :partial =>'subscriptions/form' %>
+						<!--form class="form-horizontal" role="form">
 						  <div class="form-group">
 						    <label for="inputEmail1" class="col-lg-4 control-label"></label>
 						    <div class="col-lg-10">
@@ -403,7 +404,7 @@
 						      <button type="submit" class="btn btn-success">Sign in</button>
 						    </div>
 						  </div>
-					   </form><!-- form -->
+					   </form--><!-- form -->
 					</p>
 				</div><!-- col -->
 				
