--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :email %>
   <%= f.input :name %>
   
-  <%= f.button :submit, class: 'btn-primary' %>
+  <%= f.button :submit, class: 'btn-success' %>
 <% end %>
