--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,25 +1,26 @@
 <div class="page-header">
-	<h1><%= t 'simple_form.labels.user.edit.change' %></h1>
+  <h1><%= t 'simple_form.labels.user.edit.change' %></h1>
 </div>
 
 <p><%= raw t('simple_form.messages.registration') %></p>
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-horizontal' }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put, :class => 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
-  <%= render partial: "devise/shared/flash_messages", flash: flash %> 
+  <%= render partial: "devise/shared/flash_messages", flash: flash %>
 
-    <%= f.input :email, :required => true, :autofocus => true %>
+  <%= f.input :email, :required => true, :autofocus => true %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p><%= t('simple_form.labels.user.edit.message') %></p>
-    <% end %>
+  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <p><%= t('simple_form.labels.user.edit.message') %></p>
+  <% end %>
 
-    <%= f.input :password, :autocomplete => "off", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :required => true %>
+  <%= f.input :password, :autocomplete => "off", :required => false %>
+  <%= f.input :password_confirmation, :required => false %>
+  <%= f.input :current_password, :required => true %>
 
-    <%= f.button :submit, t('simple_form.labels.user.edit.save'), class: 'btn-default' %>
+  <%= f.button :submit, t('simple_form.labels.user.edit.save'), class: 'btn-default' %>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => {:confirm => "Are you sure?"}, :method => :delete %>
+  .</p>
